# clasifica-doc-muni

./: .env.example  .gitignore  README.md
.specify/: init-options.json  integration.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_inicial.py  0002_embeddings_hnsw.py
backend/src/clasifica/: config.py  eval_classifier.py  main.py
backend/src/clasifica/api/: deps.py
backend/src/clasifica/api/routes/: auth.py  config.py  documents.py  exports.py  migration.py  reports.py  search.py
backend/src/clasifica/cli/: __init__.py
backend/src/clasifica/core/: errors.py  logging.py  security.py
backend/src/clasifica/db/: base.py
backend/src/clasifica/db/models/: __init__.py
backend/src/clasifica/db/seeds/: loader.py  tupa_base.yaml
backend/src/clasifica/schemas/: __init__.py
backend/src/clasifica/services/: anonymize.py  classifier.py  correlativo.py  dedup.py  embeddings.py  exporter.py  llm_client.py  ocr.py  organizer.py  search.py
backend/src/clasifica/workers/: celery_app.py  common.py
backend/src/clasifica/workers/tasks/: batch_migration.py  process_document.py
backend/tests/: conftest.py
backend/tests/contract/: test_llm_client.py
backend/tests/fixtures/: expected_classifications.json
backend/tests/integration/: test_cobertura_extra.py  test_endpoints_cobertura.py  test_us1_upload_flow.py  test_us2_migration.py  test_us3_review.py  test_us4_search.py  test_us5_config.py
backend/tests/unit/: test_classifier.py  test_core_services.py  test_edge_cases.py  test_servicios_extra.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/config/: ConfigPage.tsx
frontend/src/features/explorer/: ExplorerPage.tsx
frontend/src/features/migration/: MigrationPage.tsx
frontend/src/features/review/: ReviewPage.tsx
frontend/src/features/upload/: UploadPage.tsx
frontend/src/stores/: auth.ts
frontend/tests/e2e/: flujo.spec.ts  smoke.spec.ts
infra/: docker-compose.yml
infra/nginx/: clasifica.conf
infra/scripts/: backup.sh  purge_tmp.sh
specs/001-clasificacion-documentos-municipales/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-clasificacion-documentos-municipales/contracts/: api-spec.yaml  folder-structure.md  llm-contract.md  tupa-catalogo.md
