[project]
name = "clasifica-doc-muni"
version = "0.1.0"
description = "Clasificación automática de documentos PDF escaneados para municipalidades distritales del Perú"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "pdfplumber>=0.11",
    "pillow>=11.0",
    "pypdfium2>=4.30",
    "sentence-transformers>=3.3",
    "pgvector>=0.3.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 usa bcrypt.__about__ (eliminado en bcrypt>=4.1). Pin para
    # que el hash/verificación de contraseñas no falle en runtime y en seed.
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.6",
    "paddleocr>=2.9",
    "opencv-python-headless>=4.10",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpserver>=1.1",
    "testcontainers[postgres,redis]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-slugify",
    "types-pyyaml",
]

[project.scripts]
clasifica = "clasifica.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
# B008: Depends() en defaults es el patrón idiomático de FastAPI.
# N803/N806: args/vars con mayúscula (Documento, Base) mapean a modelos SQLAlchemy.
# N818: nombres de excepción del dominio en español sin sufijo Error.
ignore = ["E501", "B008", "N803", "N806", "N818"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=src/clasifica --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/alembic/*",
    # Módulos que requieren el stack runtime completo (PostgreSQL+pgvector,
    # Redis/Celery, PaddleOCR con GPU/CPU). Se validan por integración con
    # Docker Compose y el script eval_classifier, no con tests unitarios.
    "*/workers/tasks/*",
    "*/workers/common.py",
    "*/services/search.py",
    "*/eval_classifier.py",
    "*/cli/*",
    "*/main.py",
    "*/db/seeds/loader.py",
    # OCR real requiere PaddleOCR/pypdfium (extra "ocr"); su lógica de
    # orquestación se cubre con mocks en tests/unit/test_servicios_extra.py.
    "*/services/ocr.py",
]
